# syncSense

./: .gitignore  .gitmodules  ProjectDescription.md  README.md  pyproject.toml
config/: inventory.5g-smoke.example.yaml  inventory.distributed.example.yaml  inventory.example.yaml  inventory.nosync-hardware-smoke.example.yaml  inventory.wifi-smoke.example.yaml
constraints/: ubuntu24.04-aarch64-py312.txt
docs/: DEVELOPMENT_PLAN.md  EXPERIMENT_MATRIX.md  REPOSITORY_MAP.md  WIFI_THRESHOLD_CAMPAIGNS.md
profiles/: distributed_dummy.yaml  nosync_passive.yaml  nosync_passive_hardware_smoke.yaml  ssb_rx_smoke.yaml  wifi_link_smoke.yaml
schemas/v1/: 5g-ssb-rxgrid-row.schema.json  artifact.schema.json  batch-model-request.schema.json  batch-model-result.schema.json  event.schema.json  experiment-profile.schema.json  inventory.schema.json  producer-manifest.schema.json  producer-result.schema.json  run-state.schema.json  session-manifest.schema.json
src/sync_framework/: __init__.py  checksums.py  cli.py  config.py  deployment.py  domain.py  inference.py  model_adapter.py  nfs.py  orchestration.py  planning.py  publication.py  run_id.py  ssb_smoke.py  state.py  storage.py  timebase.py  validation.py  wifi_smoke.py
tests/: conftest.py
tests/integration/: test_cli.py  test_distributed_contract.py  test_failures_and_recovery.py  test_nosync_hardware_smoke.py  (+4 more)
tools/: remote_dummy_worker.py  remote_process_worker.py  run_wifi_threshold_080.sh  run_wifi_threshold_085.sh  run_wifi_threshold_090.sh  run_wifi_threshold_campaign.py  summarize_wifi_threshold_campaign.py
(+20 files in other folders)
